[gd_scene load_steps=7 format=3 uid="uid://bfa8y7t30127n"]

[ext_resource type="Script" path="res://scripts/gun/Gun.gd" id="1_7h4nn"]

[sub_resource type="Gradient" id="Gradient_ehbwv"]
offsets = PackedFloat32Array(0, 0.540741, 1)
colors = PackedColorArray(1, 0.574352, 0.0927765, 1, 0.816255, 0.842764, 0.0455471, 1, 0.585062, 0.585062, 0.585062, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_jx2ni"]
gradient = SubResource("Gradient_ehbwv")

[sub_resource type="Curve" id="Curve_7r00j"]
min_value = -1.0
_data = [Vector2(0.0542169, 0), 0.0, 0.0, 0, 0, Vector2(0.548193, 0.347368), 0.0, 0.0, 0, 0, Vector2(0.909639, 0.684211), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_yrt4r"]
curve = SubResource("Curve_7r00j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_o41xv"]
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 1.0
particle_flag_disable_z = true
spread = 35.53
gravity = Vector3(0, 0, 0)
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0
color = Color(0.882353, 0.917647, 0.133333, 1)
color_ramp = SubResource("GradientTexture1D_jx2ni")
hue_variation_curve = SubResource("CurveTexture_yrt4r")

[node name="Gun" type="Node2D"]
script = ExtResource("1_7h4nn")

[node name="Gun_Tip" type="Node2D" parent="."]

[node name="Firing_Particles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_o41xv")
lifetime = 0.2
explosiveness = 0.29

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(2, -1)

[node name="Fire_Cooldown" type="Timer" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Reload_Timer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Fire_Cooldown" to="." method="_on_fire_cooldown_timeout"]
[connection signal="timeout" from="Reload_Timer" to="." method="_on_reload_timer_timeout"]
